2025-09-15
- Disable server-side adjudication execution; adjudication is now client-managed with per-batch invocations sized by Dashboard token limits to avoid Edge timeouts.

2025-09-17
- Correct mode mapping after Scan A/B aggregation:
  - identifiable => 'redact'
  - concerning-only => 'rephrase'
  - Ensures items like <<<ITEM 17>>> with non-identifiable concerns are routed to rephrase, and any identifiable items are always redacted.

2025-01-27
- Implement client-managed batching support to prevent duplicate run guards and TAIL_RETRY issues
  - Added `clientManagedBatching` request flag to bypass server-side batch sizing and duplicate checks
  - When `clientManagedBatching=true`: processes only provided comments as single batch, skips all internal batch sizing logic
  - Gates duplicate run checks, TAIL_RETRY logic, and adjudication with `!clientManagedBatching`
  - Prevents "[DUPLICATE RUN]" and "[TAIL_RETRY] processBatch is not defined" errors for client-orchestrated batches
  - Returns `hasMore: false` for client-managed requests to indicate single-batch completion

# Scan Comments Edge Function - Recent Changes

- 2025-09-07: Prevent duplicate submissions during adjudication polling
  - Added `checkStatusOnly` request flag to enable status polling without re-running scans or re-emitting batches.
  - Frontend now sets `checkStatusOnly: true` during Phase 2 polling to avoid duplicate batch submissions.
  - Response normalization: ensured batch hints (`batchStart`, `hasMore`) remain consistent for status-only responses.

## Latest Updates

### Enhanced Token Counting and Batch Sizing
- **Precise Token Counting**: Implemented more accurate token estimation based on model characteristics
- **Dynamic Batch Sizing**: Optimized batch sizes using I/O ratios and actual token limits
- **Safety Margins**: Added configurable safety margins to prevent hitting token limits
- **Performance Monitoring**: Added detailed timing and performance metrics
